0404:0322 3:30분부터 해야지

--- a/mapSearch/src/conf/sql.properties
+++ b/mapSearch/src/conf/sql.properties
@@ -4,3 +4,10 @@ insertUser=insert into userbean values(?, ?, ?)
 updateUser=update userbean set pw=? where id=?
 deleteUser=delete from userbean where id=?
 selectAllUser=select * from userbean
+
+selectAllData=select * from databean
+selectUser=select * from databean where areaCode=? and serviceCode=?
+selectAreaCode=select * from databean where areaCode=?
+selectServiceCode=select * from databean where serviceCode=?
+
+selectResultData=select*from resultbean where areaCode=? and serviceCode=?
