MariaDB based DAO, Controller, sql 정리

--- a/mapSearch/src/conf/sql.properties
+++ b/mapSearch/src/conf/sql.properties
@@ -5,9 +5,7 @@ updateUser=update userbean set pw=? where id=?
 deleteUser=delete from userbean where id=?
 selectAllUser=select * from userbean
 
-selectAllData=select * from databean
-selectUser=select * from databean where areaCode=? and serviceCode=?
-selectAreaCode=select * from databean where areaCode=?
-selectServiceCode=select * from databean where serviceCode=?
-
-selectResultData=select*from resultbean where areaCode=? and serviceCode=?
+selectSurArea=select * from alleyData where areaCode=(select areaCode from areaCode where dong=?) and not areaCode=?
+selectArea=select * from alleyData where areaCode=? and serviceCode=?
+selectSurResult=select * from resultData where areaCode=(select areaCode from areaCode where dong=?) and not areaCode=?
+selectResult=select * from resultData where areaCode=? and serviceCode=?
