DB접속, test.html부터 시작하면 상일이 DB 접속 가능

--- a/mapSearch/src/conf/sql.properties
+++ b/mapSearch/src/conf/sql.properties
@@ -5,7 +5,7 @@ updateUser=update userbean set pw=? where id=?
 deleteUser=delete from userbean where id=?
 selectAllUser=select * from userbean
 
-selectSurArea=select * from alleyData where areaCode=(select areaCode from areaCode where dong=?) and not areaCode=?
-selectArea=select * from alleyData where areaCode=? and serviceCode=?
-selectSurResult=select * from resultData where areaCode=(select areaCode from areaCode where dong=?) and not areaCode=?
-selectResult=select * from resultData where areaCode=? and serviceCode=?
+selectSurArea=select time_flow.date, area_data.gu, area_data.dong, time_flow.areaCode, time_flow.totalPeople, time_flow.totalNearPeople, time_flow.totalBizman, time_flow.totalNearBizman, time_flow.totalLivingPeople, time_flow.avgOutcome, time_flow.avgIncome, time_flow.avgNearIcome, time_flow.avgNearOutcome, time_flow.totalFacility, time_flow.totalNearFacility from area_data, time_flow where areaCode=(select areaCode from area_data where dong=?) and not areaCode=?
+selectArea=select time_flow.date, area_data.gu, area_data.dong, time_flow.areaCode, time_flow.totalPeople, time_flow.totalNearPeople, time_flow.totalBizman, time_flow.totalNearBizman, time_flow.totalLivingPeople, time_flow.avgOutcome, time_flow.avgIncome, time_flow.avgNearIcome, time_flow.avgNearOutcome, time_flow.totalFacility, time_flow.totalNearFacility from area_data, time_flow where time_flow.areaCode=? and time_flow.areaCode=area_data.areaCode
+selectSurResult=select * from resultData where areaCode=(select areaCode from area_data where dong=?) and not areaCode=?
+selectResult=select * from resultData where areaCode=? 
