area1,2.... 201606 데이터가 DongDataBean 형식으로 들어있습니다. result는 ResultBeanData 형식으로 들어있습니다. 모두 session으로 넘어갑니다. 일단 잘 되는게 관악구 남현동! 확실한거

--- a/mapSearch/src/conf/sql.properties
+++ b/mapSearch/src/conf/sql.properties
@@ -6,5 +6,5 @@ deleteUser=delete from userbean where id=?
 selectAllUser=select * from userbean
 
 
-selectArea=select time_flow.areaCode, time_flow.date, area_data.gu, area_data.dong, time_flow.totalPeople, time_flow.totalNearPeople, time_flow.totalBizman, time_flow.totalNearBizman, time_flow.totalLivingPeople, time_flow.avgOutcome, time_flow.avgIncome, time_flow.avgNearIcome, time_flow.avgNearOutcome, time_flow.totalFacility, time_flow.totalNearFacility from area_data, time_flow where time_flow.areaCode=? and area_data.areaCode=time_flow.areaCode 
-selectResult=select * from resultData where areaCode=? 
+selectArea=select * from time_flow where areaCode=? 
+selectResult=select * from results where areaCode=? and serviceCode=?
