--- a/mapSearch/src/conf/sql.properties
+++ b/mapSearch/src/conf/sql.properties
@@ -5,7 +5,6 @@ updateUser=update userbean set pw=? where id=?
 deleteUser=delete from userbean where id=?
 selectAllUser=select * from userbean
 
-selectSurArea=select 1708_data.date, area_data.gu, area_data.dong, 1708_data.areaCode,1708_data.serviceCode,1708_data.totalNearStore,1708_data.totalStore,1708_data.avgNearMonth, 1708_data.totalPeople, 1708_data.totalNearPeople, 1708_data.totalBizman, 1708_data.totalNearBizman, 1708_data.totalLivingPeople, 1708_data.avgOutcome, 1708_data.avgIncome, 1708_data.avgNearIcome, 1708_data.avgNearOutcome, 1708_data.totalFacility, 1708_data.totalNearFacility, 1708_data.sales from area_data, 1708_data where areaCode=(select areaCode from area_data where dong=?) and not areaCode=?
-selectArea=select 1708_data.date, area_data.gu, area_data.dong, 1708_data.areaCode,1708_data.serviceCode,1708_data.totalNearStore,1708_data.totalStore,1708_data.avgNearMonth, 1708_data.totalPeople, 1708_data.totalNearPeople, 1708_data.totalBizman, 1708_data.totalNearBizman, 1708_data.totalLivingPeople, 1708_data.avgOutcome, 1708_data.avgIncome, 1708_data.totalFacility, 1708_data.totalNearFacility, 1708_data.sales from area_data, 1708_data where 1708_data.areaCode=? and 1708_data.areaCode=area_data.areaCode
-selectSurResult=select * from resultData where areaCode=(select areaCode from area_data where dong=?) and not areaCode=?
-selectResult=select * from resultData where areaCode=? 
+
+selectArea=select * from time_flow where areaCode=? 
+selectResult=select * from results where areaCode=? and serviceCode=?
