store, sales 추가함

--- a/mapSearch/src/conf/sql.properties
+++ b/mapSearch/src/conf/sql.properties
@@ -8,3 +8,4 @@ selectAllUser=select * from userbean
 
 selectArea=select * from time_flow where areaCode=? 
 selectResult=select * from results where areaCode=? and serviceCode=?
+selectStoreSales=select * from time_table where areaCode=? and serviceCode=?
